# broadcom-bt-firmware

./: .gitignore  CMakeLists.txt  DEVICES.md  LICENSE.MIT.txt  README.md  generate_files.sh
.github/ISSUE_TEMPLATE/: issue.md
.github/workflows/: main.yml
brcm/: BCM20702A1-0a5c-21f3.hcd  BCM4350C5-0a5c-6412.hcd
tools/: .project  bt-fw-converter.pl
